--- a/src/sass/essential/main.scss
+++ b/src/sass/essential/main.scss
@@ -43,6 +43,7 @@
 @import "parts/header";
 @import "parts/footer";
 @import "parts/breadcrumbs";
+@import "parts/insight-sidebar";
 
 
 /*
@@ -54,7 +55,7 @@
 /*
 * Shortcodes
 */
-//@import "shortcode/ebook";
+@import "shortcode/branch-area-box";
 
 
 /*
