--- a/components/static-sections/page-top.twig
+++ b/components/static-sections/page-top.twig
@@ -8,6 +8,7 @@
                 <div class="section-page-top--left-wrap">
                     <h1>{{ title }}</h1>
                 </div>
+                {% block left_block_below %}{% endblock %}
             </div>
             <div class="col-xl-6">
                 <div class="section-page-top--image-wrap">
