--- a/templates/single.twig
+++ b/templates/single.twig
@@ -52,6 +52,8 @@
                 </div>
                 <div class="col-xl-3 offset-xl-1">
 
+                    {% include 'sidebar-insights.twig' %}
+
                 </div>
             </div>
         </div>
