--- a/templates/single.twig
+++ b/templates/single.twig
@@ -18,7 +18,6 @@
                     <div class="content-wrapper">
                         <article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
                             <section class="article-content">
-                                <h1 class="article-h1">{{post.title}}</h1>
                                 <p class="blog-author">
                                     <span>By</span><a href="{{post.author.path}}"> {{ post.author.name }} </a><span>&bull;</span> {{ post.post_date|date}}
                                 </p>
@@ -26,20 +25,13 @@
                                     {{post.content}}
                                 </div>
                             </section>
-                            {% if post.comment_status != 'closed' %}
-                                <section class="comments">
-                                    <div class="respond">
-                                        <h3 class="h2">Comments</h3>
-                                        {{ fn('comment_form') }}
-                                    </div>
-                                    <div class="responses">
-                                        {% for cmt in post.get_comments() %}
-                                            {% include "comment.twig" with {comment:cmt} %}
-                                        {% endfor %}
-                                    </div>
-                                </section>
-                            {% endif %}
                         </article>
+                        <div class="article-footer">
+
+                            {% include 'components/parts/share.twig' %}
+
+                            <a href="{{ fn('get_the_permalink',options.page_url.blog_page) }}" class="btn btn-lg btn-primary text-uppercase">Back to Insights</a>
+                        </div>
                     </div><!-- /content-wrapper -->
 
                     {% include 'static-sections/latest-posts.twig' with {
