--- a/templates/propertyhive/shortcode/calculators.twig
+++ b/templates/propertyhive/shortcode/calculators.twig
@@ -1,33 +1,29 @@
 <section class="page-section page-section--padding50 section-property-calculator">
     <div class="section-property-calculator--inner">
         <div class="container">
-            <div class="row">
-                <div class="col-xl-8">
-                    <div class="property-calculators-wrapper">
+            <div class="property-calculators-wrapper">
 
-                        <ul class="nav">
-                            <li>
-                                <a class="active" data-toggle="tab" href="#property_mortgage_calculator">Mortgage Calculator</a>
-                            </li>
-                            <li>
-                                <a data-toggle="tab" href="#property_stamp_duty_calculator">Stamp Duty Calculator</a>
-                            </li>
-                            <li>
-                                <a data-toggle="tab" href="#property_rental_yield_calculator">Rental Yield Calculator</a>
-                            </li>
-                        </ul>
+                <ul class="nav justify-content-center">
+                    <li>
+                        <a class="active" data-toggle="tab" href="#property_mortgage_calculator">Mortgage Calculator</a>
+                    </li>
+                    <li>
+                        <a data-toggle="tab" href="#property_stamp_duty_calculator">Stamp Duty Calculator</a>
+                    </li>
+                    <li>
+                        <a data-toggle="tab" href="#property_rental_yield_calculator">Rental Yield Calculator</a>
+                    </li>
+                </ul>
 
-                        <div class="tab-content">
-                            <div class="tab-pane fade show active" id="property_mortgage_calculator">
-                                {{ '[mortgage_calculator]' | shortcodes }}
-                            </div>
-                            <div class="tab-pane fade" id="property_stamp_duty_calculator">
-                                {{ '[stamp_duty_calculator]' | shortcodes }}
-                            </div>
-                            <div class="tab-pane fade" id="property_rental_yield_calculator">
-                                {{ '[rental_yield_calculator]' | shortcodes }}
-                            </div>
-                        </div>
+                <div class="tab-content">
+                    <div class="tab-pane fade show active" id="property_mortgage_calculator">
+                        {{ '[mortgage_calculator]' | shortcodes }}
+                    </div>
+                    <div class="tab-pane fade" id="property_stamp_duty_calculator">
+                        {{ '[stamp_duty_calculator]' | shortcodes }}
+                    </div>
+                    <div class="tab-pane fade" id="property_rental_yield_calculator">
+                        {{ '[rental_yield_calculator]' | shortcodes }}
                     </div>
                 </div>
             </div>
