--- a/src/sass/essential/pages/_property-detail.scss
+++ b/src/sass/essential/pages/_property-detail.scss
@@ -98,6 +98,28 @@
             }
         }
 
+        .images{
+            margin-bottom: 70px;
+
+            .flexslider{
+                border-width: 0;
+
+                &.thumbnails{
+                    margin-top: 30px;
+
+                    li{
+                        &.flex-active-slide{
+
+                        }
+                    }
+                }
+            }
+
+            #slider{
+                margin-bottom: 0;
+            }
+        }
+
         .property-detail-tabs{
             list-style: none;
             margin: 0;
