create branch class to manage everything with branches + added logic for display related posts with viewed property

--- a/components/static-sections/latest-posts.twig
+++ b/components/static-sections/latest-posts.twig
@@ -3,7 +3,7 @@
     {% set grid_css_class = 'col-xl-6' %}
 {% endif %}
 
-{% if posts %}
+{% if posts.found_posts %}
 
     <section class="page-section page-section--padding50 section-latest-posts">
         {% if ignore_container != 1 %}<div class="container">{% endif %}
