insights list - filter by custom branches

--- a/components/shortcodes/branch-area-box.twig
+++ b/components/shortcodes/branch-area-box.twig
@@ -5,7 +5,7 @@
     <form action="{{ form_url }}" method="get">
         <div class="dropdown-arrow-wrap">
             <select class="form-control" name="branch_id">
-                <option>Select Branch Area</option>
+                <option value="">Select Branch Area</option>
 
                 {% for office in offices %}
 
