--- a/components/parts/share.twig
+++ b/components/parts/share.twig
@@ -2,7 +2,7 @@
 {% set link = post.link %}
 
 <div class="share-page">
-    <div class="share-post--title">Share this:</div>
+    <div class="share-page--title">Share this:</div>
     <ul>
         <li><a href="javascript:;" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u={{ link }}','Facebook','width=600,height=400')"><i class="fa-brands fa-facebook-square"></i></a></li>
         <li><a href="javascript:;" onclick="window.open('https://twitter.com/intent/tweet?text={{ link }}','Twitter','width=600,height=400')"><i class="fa-brands fa-twitter-square"></i></a></li>
