--- a/src/sass/essential/main.scss
+++ b/src/sass/essential/main.scss
@@ -77,6 +77,7 @@
 @import "pages/properties-search";
 @import "pages/property-detail";
 @import "pages/insights-list";
+@import "pages/insight-detail";
 
 
 // Responsive Design
