--- a/templates/single.twig
+++ b/templates/single.twig
@@ -18,9 +18,13 @@
                     <div class="content-wrapper">
                         <article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
                             <section class="article-content">
-                                <p class="blog-author">
-                                    <span>By</span><a href="{{post.author.path}}"> {{ post.author.name }} </a><span>&bull;</span> {{ post.post_date|date}}
-                                </p>
+                                <div class="blog-author">
+                                    {{ post.post_date|date('d F Y')}}
+                                    {% if category_links %}
+                                        <span class="separator">/</span>
+                                        {{ category_links }}
+                                    {% endif %}
+                                </div>
                                 <div class="article-body">
                                     {{post.content}}
                                 </div>
@@ -38,7 +42,7 @@
                         title: 'Related Insights',
                         ignore_container: 1,
                         columns: 2,
-                        posts: related_posts
+                        posts: related_posts_query
                     } %}
 
                 </div>
