insight pages - promo area banner

--- a/src/sass/essential/main.scss
+++ b/src/sass/essential/main.scss
@@ -68,6 +68,7 @@
 @import "sections/content-image";
 @import "sections/cta-carousel";
 @import "sections/property-calculator";
+@import "sections/promo-area";
 
 
 /*
