--- a/src/sass/essential/pages/_insights-list.scss
+++ b/src/sass/essential/pages/_insights-list.scss
@@ -14,6 +14,10 @@
         text-align: right;
     }
 
+    .section-promo-area{
+        margin-top: 90px;
+    }
+
     .insight-sidebar{
         .widget_block{
             &:first-child{
