--- a/src/sass/essential/pages/_insight-detail.scss
+++ b/src/sass/essential/pages/_insight-detail.scss
@@ -32,6 +32,10 @@
                 p {
                     margin-bottom: 20px;
                 }
+
+                & > *:last-child{
+                    margin-bottom: 0;
+                }
             }
         }
     }
