--- a/templates/single.twig
+++ b/templates/single.twig
@@ -45,6 +45,7 @@
                         posts: related_posts_query
                     } %}
 
+                    {% include 'static-sections/promo-area.twig' %}
                 </div>
                 <div class="col-xl-3 offset-xl-1">
 
