properties search form - added new homes only checkbox(static)

--- a/src/sass/essential/sections/_home-hero.scss
+++ b/src/sass/essential/sections/_home-hero.scss
@@ -89,9 +89,13 @@
         }
     }
 
-    .from-recent-properties-checkbox{
+    &--checkbox-group{
         margin-top: 15px;
         font-size: 14px;
+
+        .form-check{
+            margin-right: 50px;
+        }
     }
 }
 
