my account - partly styled

--- a/src/sass/essential/main.scss
+++ b/src/sass/essential/main.scss
@@ -79,6 +79,7 @@
 @import "pages/property-detail";
 @import "pages/insights-list";
 @import "pages/insight-detail";
+@import "pages/property-my-account";
 
 
 // Responsive Design
