--- a/src/sass/essential/pages/_properties-search.scss
+++ b/src/sass/essential/pages/_properties-search.scss
@@ -19,6 +19,7 @@
 
         .propertyhive-ordering{
             margin-right: 30px;
+            margin-bottom: 0;
 
             &--inner{
                 position: relative;
