--- a/src/sass/essential/parts/_header.scss
+++ b/src/sass/essential/parts/_header.scss
@@ -84,3 +84,33 @@
         }
     }
 }
+
+body{
+    &.logged-in{
+        #header{
+            .header-top-nav{
+                ul{
+                    li{
+                        &.item-sign-in{
+                            display: none;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    &:not(.logged-in) {
+        #header{
+            .header-top-nav{
+                ul{
+                    li{
+                        &.item-my-account{
+                            display: none;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
