--- a/templates/propertyhive/global/search-form-default.twig
+++ b/templates/propertyhive/global/search-form-default.twig
@@ -33,5 +33,7 @@
                 </label>
             </div>
         </div>
+
+        {% do action('property_search_form_end') %}
     </form>
 </div>
