--- a/templates/propertyhive/parts/branch-details.twig
+++ b/templates/propertyhive/parts/branch-details.twig
@@ -1,9 +1,11 @@
-<div class="property-branch-details">
-    <div>
-        <a href="#"><i class="fa-light fa-phone"></i> 020 1234 1234</a>
-        <span class="property-branch-details--rate">Standard rate</span>
+{% if branch_data %}
+    <div class="property-branch-details">
+        <div>
+            <a href="#"><i class="fa-light fa-phone"></i> {{ branch_data.phone }}</a>
+            <span class="property-branch-details--rate">Standard rate</span>
+        </div>
+        <div>
+            <a href="#"><i class="fa-light fa-envelope"></i> Contact Branch</a>
+        </div>
     </div>
-    <div>
-        <a href="#"><i class="fa-light fa-envelope"></i> Contact Branch</a>
-    </div>
-</div>
+{% endif %}
