--- a/src/sass/essential/common/_variables.scss
+++ b/src/sass/essential/common/_variables.scss
@@ -17,6 +17,7 @@ $btn-padding-y-lg: 17px;
 
 $theme-colors: (
     primary: $brand-main-blue,
+    secondary: $support-color2,
     danger: $brand-main-red,
     warning: #F0650C
 );
