--- a/src/sass/essential/pages/_property-my-account.scss
+++ b/src/sass/essential/pages/_property-my-account.scss
@@ -2,10 +2,109 @@
     display: flex;
 
     .my-account-navigation{
+        flex: 1 1 270px;
+        max-width: 270px;
+        padding: 50px 0;
+        position: relative;
+        z-index: 10;
 
+        ul{
+            background-color: $brand-main-blue;
+            padding: 30px;
+            list-style: none;
+            margin: 0;
+
+            li{
+                &:not(:first-child) {
+                    margin-top: 10px;
+                }
+
+                a{
+                    color: #FFF;
+                }
+
+                &.active{
+                    a{
+                        color: $brand-main-red;
+                        text-decoration: underline;
+                    }
+                }
+            }
+        }
     }
 
     .my-account-sections{
+        flex: 1;
+        background-color: $support-color5;
+        padding: 50px;
+        position: relative;
 
+        &:before{
+            content: "";
+            position: absolute;
+            right: 100%;
+            width: 100px;
+            height: 100%;
+            background-color: $support-color5;
+            top: 0;
+        }
+    }
+}
+
+#my-account-requirements{
+    .account-requirements-form{
+        &:not(:first-child) {
+            border-top: 1px solid $brand-main-blue;
+            margin-top: 40px;
+            padding-top: 40px;
+        }
+
+        .control-department{
+            label:not([for]) {
+                margin-right: 50px;
+            }
+        }
+    }
+}
+
+#my-account-shortlisted_properties{
+    .viewings-table{
+        background-color: #FFF;
+        border: 1px solid $support-color4;
+
+        tr{
+            td,th{
+                padding: 10px;
+            }
+
+            td{
+                border-top: 1px solid $support-color4;
+            }
+        }
+    }
+}
+
+#my-account-saved_searches{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 40px 30px;
+
+    & > div{
+        background-color: #FFF;
+        box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+        padding: 30px;
+
+        h4{
+            margin-bottom: 20px;
+        }
+
+        .button-delete-search{
+            margin-top: 10px;
+
+            &:hover{
+                background-color: $brand-main-red;
+                border-color: $brand-main-red;
+            }
+        }
     }
 }
