--- a/src/sass/essential/common/_sections.scss
+++ b/src/sass/essential/common/_sections.scss
@@ -8,6 +8,7 @@
         margin-bottom: 50px;
         font-weight: 300;
 
+        h2,
         h3{
             margin-bottom: 0;
         }
@@ -23,5 +24,9 @@
 
     &--actions{
         margin-top: 70px;
+
+        &.actions-mt50{
+            margin-top: 50px;
+        }
     }
 }
