--- a/components/static-sections/page-top.twig
+++ b/components/static-sections/page-top.twig
@@ -1,5 +1,5 @@
-{% set title = post.title ? post.title : custom.title %}
-{% set image = post.thumbnail ? post.thumbnail : custom.thumbnail %}
+{% set title = custom.title ? custom.title : post.title %}
+{% set image = custom.thumbnail ? custom.thumbnail : post.thumbnail %}
 
 <section class="section-page-top {{ section_css_class }}">
     <div class="container-wide">
@@ -7,6 +7,10 @@
             <div class="col-xl-6">
                 <div class="section-page-top--left-wrap">
                     <h1>{{ title }}</h1>
+
+                    {% if short_description %}
+                        <div class="section-page-top--short-description">{{ short_description }}</div>
+                    {% endif %}
                 </div>
                 {% block left_block_below %}{% endblock %}
             </div>
