global breadcrumbs, 404 page, import new homes meta tag

--- a/src/sass/essential/main.scss
+++ b/src/sass/essential/main.scss
@@ -71,6 +71,8 @@
 /*
 * Sections
 */
+@import "sections/404";
+@import "sections/404_search-properties";
 @import "sections/home-hero";
 @import "sections/page-top";
 @import "sections/newsletter";
