--- a/templates/404.twig
+++ b/templates/404.twig
@@ -1,5 +1,35 @@
 {% extends "base.twig" %}
 
 {% block content %}
-	Sorry, we couldn't find what you're looking for.
+
+    <section class="section-404">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-5 offset-xl-1">
+                    <h1>We couldn’t find that page</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.
+                </div>
+                <div class="col-xl-5 text-xl-right">
+                    <img src="{{ theme.link }}/dist/images/keys404.jpg">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="page-section page-section--padding50 section-404-search-properties-form">
+        <div class="container">
+            <div class="section-404-search-properties-form--inner">
+                <div class="row">
+                    <div class="col-xl-10 offset-xl-1">
+                        <div class="page-section--heading">
+                            <h2>Looking For A Property?</h2>
+                        </div>
+                        {{ '[property_search_form id="hero_search"]' | shortcodes }}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    {#{% include 'components/static-sections/book-valuation.twig' %}#}
 {% endblock %}
