--- a/components/global/branch.twig
+++ b/components/global/branch.twig
@@ -1,5 +1,5 @@
 <div class="branch-post">
-    <a href="#">
+    <a href="{{ post.link }}">
         {% if post.thumbnail %}
             <img src="{{ post.thumbnail |resize(740,540) }}" title="{{ post.title }}">
         {% else %}
